--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
       // Update the chart header to include the regression equation
       const headerEl = document.getElementById(canvasId).closest('.text-center').querySelector('h5');
       if (headerEl) {
-        headerEl.textContent = `${section} — ${eqText}`;
+        headerEl.textContent = `${section} | ${eqText}`;
       }
 
       const ctx = document.getElementById(canvasId).getContext('2d');
@@ -676,7 +676,7 @@
       // Update the chart header to include the regression equation (again for update)
       const headerEl2 = document.getElementById(canvasId).closest('.text-center').querySelector('h5');
       if (headerEl2) {
-        headerEl2.textContent = `${section} — ${eqText}`;
+        headerEl2.textContent = `${section} | ${eqText}`;
       }
       chartVar.update();
       return chartVar;
