--- a/mocks.html
+++ b/mocks.html
@@ -631,7 +631,7 @@
       // Update the chart header <h5> text to include equation
       const headerEl = document.getElementById(canvasId).closest('.text-center').querySelector('h5');
       if (headerEl) {
-        headerEl.textContent = `${section} — ${eqText}`;
+        headerEl.textContent = `${section} | ${eqText}`;
       }
 
       const ctx = document.getElementById(canvasId).getContext('2d');
@@ -663,7 +663,7 @@
       chartVar.data.datasets[0].data = values;
       // Also update the header on chart update
       if (headerEl) {
-        headerEl.textContent = `${section} — ${eqText}`;
+        headerEl.textContent = `${section} | ${eqText}`;
       }
       chartVar.update();
       return chartVar;
