--- a/mocks.html
+++ b/mocks.html
@@ -192,6 +192,7 @@
                 <option value="Medentry">Medentry</option>
                 <option value="Medify">Medify</option>
                 <option value="Pearson Vue">Pearson Vue</option>
+                <option value="Paper">Paper</option>
               </select>
             </div>
             <!-- VR Score -->
