--- a/index.html
+++ b/index.html
@@ -448,6 +448,10 @@
     const analytics = getAnalytics(app);
     const auth = getAuth(app);
     const db   = getFirestore(app);
+    // Expose to global for non-module scripts
+    window.db = db;
+    window.doc = doc;
+    window.updateDoc = updateDoc;
     // Recent Updates: real-time subscription with onSnapshot
     const recentEl = document.getElementById('recentUpdates');
     function subscribeRecent() {
@@ -733,7 +737,6 @@
 <!-- Sticky-note overlay for Reviews -->
 <div id="noteOverlay">
   <div class="sticky-note">
-    <button id="noteSave" class="btn btn-sm btn-primary position-absolute top-0 start-0 m-2">Save</button>
     <button id="noteClose" class="btn-close position-absolute top-0 end-0 m-2" aria-label="Close"></button>
     <div
       id="noteContent"
@@ -744,37 +747,31 @@
 </div>
 <script>
 // Only handle overlay close logic globally (not review open, which is now per-row)
-document.getElementById('noteClose').addEventListener('click', function() {
-  document.getElementById('noteOverlay').style.display = 'none';
+document.getElementById('noteClose').addEventListener('click', async function() {
+  const overlay = document.getElementById('noteOverlay');
+  const docId = overlay.dataset.currentId;
+  const newReview = document.getElementById('noteContent').textContent.trim();
+  try {
+    await updateDoc(doc(db, 'scores', docId), { review: newReview });
+    // Update the corresponding table cell
+    const cell = document.querySelector(`#historyBody textarea.review-cell[data-doc-id="${docId}"]`);
+    if (cell) cell.value = newReview;
+  } catch (err) {
+    console.error('Failed to save review:', err);
+    alert('Could not save review: ' + err.message);
+  }
+  overlay.style.display = 'none';
 });
-</script>
-<script>
-  const noteSaveBtn = document.getElementById('noteSave');
-  noteSaveBtn.addEventListener('click', async () => {
-    const overlay = document.getElementById('noteOverlay');
-    const docId = overlay.dataset.currentId;
-    const newReview = document.getElementById('noteContent').textContent.trim();
-    try {
-      await updateDoc(doc(db, 'scores', docId), { review: newReview });
-      // Update the corresponding table cell
-      const cell = document.querySelector(`#historyBody textarea.review-cell[data-doc-id="${docId}"]`);
-      if (cell) cell.value = newReview;
-    } catch(err) {
-      console.error('Failed to save review:', err);
-      alert('Could not save review: ' + err.message);
-    }
-    overlay.style.display = 'none';
+// Mark each textarea with its doc ID
+document.addEventListener('DOMContentLoaded', () => {
+  document.querySelectorAll('#historyBody tr').forEach(tr => {
+    const btn = tr.querySelector('button[onclick^="deleteScore("]');
+    if (!btn) return;
+    const id = btn.getAttribute('onclick').match(/deleteScore\('(.+)'\)/)[1];
+    const ta = tr.querySelector('textarea.review-cell');
+    if (ta) ta.dataset.docId = id;
   });
-  // Mark each textarea with its doc ID
-  document.addEventListener('DOMContentLoaded', () => {
-    document.querySelectorAll('#historyBody tr').forEach(tr => {
-      const btn = tr.querySelector('button[onclick^="deleteScore("]');
-      if (!btn) return;
-      const id = btn.getAttribute('onclick').match(/deleteScore\('(.+)'\)/)[1];
-      const ta = tr.querySelector('textarea.review-cell');
-      if (ta) ta.dataset.docId = id;
-    });
-  });
+});
 </script>
 </body>
 </html>
